--- a/flask_blog/templates/entries/show.html
+++ b/flask_blog/templates/entries/show.html
@@ -44,7 +44,7 @@
                 <button type="submit" class="btn btn-secondary">編集</button>
             </form>
 
-            <form action="{{ url_for('delte_entry', id=entry.id)}}" method="post">
+            <form action="{{ url_for('delete_entry', id=entry.id)}}" method="post">
                 <button type="submit" class="btn btn-danger" style="margin-left:5px">削除</button>
             </form>
         </div>
