--- a/flask_blog/templates/entries/show.html
+++ b/flask_blog/templates/entries/show.html
@@ -13,6 +13,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
