--- a/flask_blog/templates/entries/show.html
+++ b/flask_blog/templates/entries/show.html
@@ -9,7 +9,7 @@
 <br>
 
 <div class="btn-group">
-    <form action="{{ url_for('edit_entry', id=entry.id)}}" method="post">
+    <form action="{{ url_for('edit_entry', id=entry.id)}}" method="get">
         <button type="submit" class="btn btn-secondary">編集</button>
     </form>
 
