--- a/flask_blog/templates/entries/show.html
+++ b/flask_blog/templates/entries/show.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 <h2>{{ entry.title }}</h2>
-<br>{{ entry.test|safe }}
+<br>{{ entry.text|safe }}
 <br>
 <br>投稿日 {{ entry.created_at }}
 <br>
