--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -25,9 +25,18 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav navbar-right">
+                {% if not current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('login') }}">ログイン</a>
+                </li>
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('new_entry') }}">新規投稿</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">ログアウト</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
