feat: flashが表示されるように修正

--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -40,6 +40,13 @@
             </ul>
         </div>
     </nav>
+
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-info" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
+
     <div class="blog-body">
         {% block body %}{% endblock %}
     </div>
